replace built in grooves, fix label highlighting, add link button, align everything

--- a/cordova/www/css/groove_writer_orange.css
+++ b/cordova/www/css/groove_writer_orange.css
@@ -297,7 +297,7 @@ body {
 .line-labels {
   display: inline-block;
   vertical-align: top;
-  width: 80px;
+  width: 108px;
   font-size: 20px;
   display: table-cell;
 }
@@ -307,7 +307,7 @@ body {
   background: #000;
   color: #ebb044;
   padding-top: 9px;
-  padding-left: 1px;
+  padding-left: 8px;
   font-size: 12px;
   cursor: pointer;
   text-align: left;
@@ -318,7 +318,7 @@ body {
   background: #000;
   color: #ebb044;
   padding-top: 9px;
-  padding-left: 1px;
+  padding-left: 8px;
   font-size: 12px;
   cursor: pointer;
   text-align: left;
@@ -343,6 +343,12 @@ body {
   cursor: pointer;
   text-align: left;
 }
+.tom-label {
+  margin-top: 35px;
+  margin-left: 8px;
+  cursor: pointer;
+  text-align: left;
+}
 .stickings-label:hover {
   color: #f7f1cf;
 }
@@ -351,7 +357,8 @@ body {
 }
 .hh-label:hover,
 .snare-label:hover,
-.kick-label:hover {
+.kick-label:hover,
+.tom-label:hover {
   color: #ebb044;
 }
 .music-line-container {
@@ -1201,6 +1208,23 @@ input[type="checkbox"]:not(:checked) + label {
 .bottomButtonLabel {
   margin-top: 2px;
   display: block;
+}
+.brandingRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.brandingRow__link {
+  transform: scale(0.5);
+  transition: all 0.25s ease;
+}
+.brandingRow__link:hover {
+  cursor: pointer;
+  transform: scale(1);
+  transition: all 0.25s ease;
+}
+.brandingRow__link_image {
+  border-radius: 5px;
 }
 @media print {
   /* keep at bottom so it overrides the styles above */
