--- a/css/groove_writer.css
+++ b/css/groove_writer.css
@@ -236,7 +236,7 @@ body {
 .line-labels {
   display: inline-block;
   vertical-align: top;
-  width: 80px;
+  width: 108px;
   font-size: 20px;
   display: table-cell;
 }
@@ -246,7 +246,7 @@ body {
   background: #f7f1cf;
   color: #ebb044;
   padding-top: 9px;
-  padding-left: 1px;
+  padding-left: 8px;
   font-size: 12px;
   cursor: pointer;
   text-align: left;
@@ -257,7 +257,7 @@ body {
   background: #f7f1cf;
   color: #ebb044;
   padding-top: 9px;
-  padding-left: 1px;
+  padding-left: 8px;
   font-size: 12px;
   cursor: pointer;
   text-align: left;
@@ -282,6 +282,12 @@ body {
   cursor: pointer;
   text-align: left;
 }
+.tom-label {
+  margin-top: 35px;
+  margin-left: 8px;
+  cursor: pointer;
+  text-align: left;
+}
 .stickings-label:hover {
   color: #000;
 }
@@ -290,7 +296,8 @@ body {
 }
 .hh-label:hover,
 .snare-label:hover,
-.kick-label:hover {
+.kick-label:hover,
+.tom-label:hover {
   color: #ebb044;
 }
 .music-line-container {
@@ -939,6 +946,23 @@ input[type="checkbox"]:not(:checked) + label {
 }
 .bottomButtonLabel {
   display: block;
+}
+.brandingRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.brandingRow__link {
+  transform: scale(0.5);
+  transition: all 0.25s ease;
+}
+.brandingRow__link:hover {
+  cursor: pointer;
+  transform: scale(1);
+  transition: all 0.25s ease;
+}
+.brandingRow__link_image {
+  border-radius: 5px;
 }
 @media print {
   /* keep at bottom so it overrides the styles above */
